--- a/style.css
+++ b/style.css
@@ -65,5 +65,7 @@ div.jumbotron {
   font-size: 20px;
   padding-left: 40px;
   padding-right: 40px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   line-height: 40px;
 }
