--- a/style.css
+++ b/style.css
@@ -63,9 +63,6 @@ div.jumbotron {
 
 .jumbotron p {
   font-size: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding: 0 40px 0 40px;
   line-height: 40px;
 }
